--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "OpanSans", sans-serif;
   color: #555555;
 }
 
@@ -635,7 +635,7 @@ a:hover {
   background-color: #795548;
 }
 .navbar-default.navbar-trans .nav-link:hover {
-  color: #fff;
+  color: #000000;
 }
 .navbar-default.navbar-trans .show > .nav-link,
 .navbar-default.navbar-trans .active > .nav-link,
@@ -1815,4 +1815,51 @@ footer .copyright-footer {
 }
 footer .credits {
   font-size: 14px;
+}
+
+
+/*--------------------------------------------------------------
+# Chat
+--------------------------------------------------------------*/
+
+
+.chating{
+  background-color: #16da47;
+  border-radius: 50px;
+  box-shadow: 0 0 4px 2px rgb(0 0 0 / 10%);
+  position: fixed;
+  z-index: 10;
+  right: 15px;
+  bottom: 50px;
+  transform: translateY(-50%);
+}
+.chat-item{
+  border-radius: 50px;
+  position:static;
+  width: 50px;
+  height: 50px;
+  display: block;
+  line-height: 0;
+  font-size: 0;
+  margin-bottom: 2px;
+}
+i.fa.fa-envelope {
+  font-size: 20px;
+}
+
+.chat-item a{
+  font-size: 28px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  outline: none;
+  text-decoration: none;
+  color: #fff;
+  transition: all .2s;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
